ordered credit union list alphabetically, and fixed logo sizing on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -264,3 +264,30 @@ h3 {
   text-align: center;
   font-weight: bold
 }
+
+
+@media (max-width: 800px) {
+  .result-logo {
+    width: 80px;
+  }
+
+  .result-text {
+    font-size: 1.8rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo-name-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .result-logo {
+    margin-right: 0;
+    margin-bottom: 0.5rem;
+  }
+
+  .result-text {
+    text-align: center;
+  }
+}
